--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ body {
   
   #game {
     max-width: 500px;
-    max-height: 400px;
+    max-height: 500px;
     background-color: #ffffff;
     color: #ffffff;
     margin: 30px auto 0px;
@@ -42,4 +42,26 @@ body {
     background-color: #feac32;
     background-image: linear-gradient(#fecc4c, #ffac33);
     border: 3px solid #feac32;
+  }
+
+  #imgContainer {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  #locationImg {
+    width: 100%;
+    height: 100%;
+  }
+  
+  #enemyImg{
+    position:absolute;
+    justify-content: center;
+    max-width: 50%;
+    max-height: 50%;
+    display: none;
   }
